<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_sheet"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    android:paddingTop="12dp"
    android:paddingBottom="24dp">

    <View
        android:layout_width="42dp"
        android:layout_height="5dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_card"
        android:backgroundTint="#D5DBE8" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:background="@drawable/bg_icon_circle">

            <ImageView
                android:id="@+id/img_type"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:importantForAccessibility="no"
                android:src="@drawable/ic_text"
                app:tint="@color/accent" />
        </FrameLayout>

        <TextView
            android:id="@+id/txv_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:fontFamily="@font/bnazaninbold"
            android:text="@string/type_text"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:maxHeight="180dp"
        android:background="@drawable/input_normal"
        android:padding="14dp"
        android:scrollbars="none">

        <TextView
            android:id="@+id/txv_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textIsSelectable="true"
            android:textSize="16sp" />
    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_primary"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_accent"
        android:drawableStart="@drawable/ic_open"
        android:drawablePadding="8dp"
        android:fontFamily="@font/bnazaninbold"
        android:gravity="center"
        android:text="@string/action_open"
        android:textColor="@color/on_accent"
        android:textSize="17sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_copy"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn_outline"
            android:drawableStart="@drawable/ic_copy"
            android:drawablePadding="6dp"
            android:fontFamily="@font/bnazaninbold"
            android:gravity="center"
            android:text="@string/action_copy"
            android:textColor="@color/accent"
            android:textSize="15sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_share"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn_accent"
            android:drawableStart="@drawable/ic_share"
            android:drawablePadding="6dp"
            android:fontFamily="@font/bnazaninbold"
            android:gravity="center"
            android:text="@string/action_share"
            android:textColor="@color/on_accent"
            android:textSize="15sp" />
    </LinearLayout>

</LinearLayout>
